2009-01-13 Nicolas Roard <nicolas@roard.com>
	Put back the creation panels and added properties
	* Add property code (can add property to a class and use them)
	* Added property adding panel
	* Plugged back class/category adding panels

2009-01-09 Nicolas Roard <nicolas@roard.com>
	Large number of modifications:
	* Refactored the Gorm UI to have different content depending on the context
          (e.g. show a table for the class properties, or a textview for a method)
        * Moved add/remove buttons from the browser's window to menu items
        * Added an info panel
        * Added preliminary support for class properties and instance/class distinction
        * Added preliminary support for adding documentation

2009-01-08 Nicolas Roard <nicolas@roard.com>

	* Modified the Gorm file to have resizing with splitview
	* Added documentation button
	* Now automatically creates a new method if the signature is different
          (rather than explicitely have to add a method)

2009-01-08 Nicolas Roard <nicolas@roard.com>
	
	Added SmalltalkCompiler early support.
	* Test a class via the "Run Class" menu item (the class need to implement a run method)
	* Use the save menu item to inject the code in the runtime

2009-01-08 Nicolas Roard <nicolas@roard.com>

	Preliminar version of a Smalltalk IDE for Etoile.
	* Implements a meta model (classes->categories->methods)
	* Allow basic edition/creation